Update JVM args for Maven wrapper