@@ -1,2 +1,3 @@
 --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
 --enable-native-access=ALL-UNNAMED
+-XX:+UseCompactObjectHeaders
